<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">KeyFlinger</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="label_phone_key">123</string>

    <!-- Preferences -->
    <string-array name="pref_keyboard_entries">
      <item>QWERTY</item>
      <item>Single Touch - Outside</item>
      <item>Single Touch - Center</item>
      <item>Multi Touch</item>
    </string-array>
    <string-array name="pref_keyboard_values">
      <item>kb_qwerty</item>
      <item>kb_st_outside</item>
      <item>kb_st_center</item>
      <item>kb_multitouch</item>
    </string-array>
    <string name="pref_keyboard_title">Keyboard Type</string>
    <string name="pref_longpress_title">Mini Keyboard</string>
    <string name="pref_longpress_summary">Enables popup keyboard with alternate characters</string>
    <string name="pref_touchslop_title">Touch slop size</string>
    <string name="pref_touchslop_summary">Slop size for touch detection</string>
    <string name="pref_doubletapslop_title">Double tap slop size</string>
    <string name="pref_doubletapslop_summary">Slop size for double tap detection</string>
    <string name="pref_minflingvelocity_title">Minimum fling velocity</string>
    <string name="pref_minflingvelocity_summary">Minimum velocity for a motion to be considered a fling</string>
</resources>
